# agentic-voice-assistant

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  app.py  architecture.md  asr_tts_usage_guide.ipynb  asr_tts_usage_guide.md  cli.py  inspect_chroma_meta.py  inspect_rag_results.py  main.py  pyproject.toml  test_tts.ipynb
docs/: architecture.md  eda.md  mcp-tools.md  prompts.md
notebooks/: data_preprocessing.ipynb  embedding.ipynb  update_embedding_config.py
src/: __init__.py  config.py
src/asr/: asr.py  test_question.m4a
src/llm/: groq_llm.py
src/mcp/: __init__.py  mcp_server.py  rag_tool.py  schemas.py  web_tool.py
src/orchestration/: __init__.py  graph.py
src/rag/: README.md  __init__.py  build_vector_store_runner.py  debug_metadata.py  embedding_client.py  embedding_service.py  inspect_chroma_meta.py  inspect_rag_results.py  run_service.py  vector_store_service.py
src/tts/: speaker_embeddings.pt  tts.py
vector_store_1/: chroma.sqlite3
