[project]
name = "agentic-voice-assistant"
version = "0.1.0"
description = "Voice-to-Voice AI Assistant for Product Discovery using LangGraph, MCP and RAG"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.4.1",
    "langgraph>=1.0.3",
    "pandas>=2.3.3",
    "streamlit>=1.51.0",
]
